[gd_scene load_steps=21 format=3 uid="uid://cucj5boko1qpn"]

[ext_resource type="Script" path="res://test/debug/animation_tester.gd" id="1_q42px"]
[ext_resource type="PackedScene" uid="uid://d08aatgxmymbf" path="res://game_objects/player/player.tscn" id="2_8jxdu"]
[ext_resource type="PackedScene" uid="uid://dr48wela8mtxd" path="res://game_objects/items/weapons/hic_rifles/pm_52/pm_52.tscn" id="3_jl4nq"]
[ext_resource type="PackedScene" uid="uid://ddsqkhwkuipda" path="res://ui/inventory/player_inventory.tscn" id="3_w3nvw"]
[ext_resource type="Script" path="res://resource_access/equipment_slot_type.gd" id="4_wtskt"]
[ext_resource type="Script" path="res://resource_access/Inventory.gd" id="5_nptoh"]
[ext_resource type="Resource" uid="uid://3nqgvhg4lre8" path="res://components/ammo_component/ammo_types/heavy_intermediate_cartridge/heavy_intermediate_cartridge.tres" id="7_acq5m"]
[ext_resource type="Script" path="res://game_objects/items/weapons/gun_stats.gd" id="8_tkvb8"]

[sub_resource type="Resource" id="Resource_c2lqt"]
script = ExtResource("4_wtskt")
name = "BackpackSlot"
allowed_types = Array[int]([1])

[sub_resource type="Resource" id="Resource_5xhft"]
script = ExtResource("4_wtskt")
name = "ArmorSlot"
allowed_types = Array[int]([3])

[sub_resource type="Resource" id="Resource_3yuyw"]
script = ExtResource("4_wtskt")
name = "GunSlot1"
allowed_types = Array[int]([0])

[sub_resource type="Resource" id="Resource_k0qab"]
script = ExtResource("4_wtskt")
name = "GunSlot2"
allowed_types = Array[int]([0])

[sub_resource type="Resource" id="Resource_1jxct"]
resource_local_to_scene = true
script = ExtResource("5_nptoh")
initial_height = 2
initial_width = 7
equipment_slots = Array[ExtResource("4_wtskt")]([SubResource("Resource_c2lqt"), SubResource("Resource_5xhft"), SubResource("Resource_3yuyw"), SubResource("Resource_k0qab")])

[sub_resource type="Resource" id="Resource_rlsbf"]
resource_local_to_scene = true
script = ExtResource("8_tkvb8")
magazine_size = 30
rpm = 600
base_recoil = Vector2(0, 0.025)
recoil_variability = Vector2(0.025, 0.013)
fire_modes = ["semi", "auto"]
ads_accel = 10.0
ads_fov = 50.0
moa = 5.0
turn_speed = 25.0
ammo_type = ExtResource("7_acq5m")
reload_time_Sec = 2.5
reload_thresholds = Array[float]([1.0])

[sub_resource type="Resource" id="Resource_8yqet"]
resource_local_to_scene = true
script = ExtResource("8_tkvb8")
magazine_size = 30
rpm = 600
base_recoil = Vector2(0, 0.025)
recoil_variability = Vector2(0.025, 0.013)
fire_modes = ["semi", "auto"]
ads_accel = 10.0
ads_fov = 50.0
moa = 5.0
turn_speed = 25.0
ammo_type = ExtResource("7_acq5m")
reload_time_Sec = 2.5
reload_thresholds = Array[float]([1.0])

[sub_resource type="Resource" id="Resource_32krh"]
script = ExtResource("4_wtskt")
name = "BackpackSlot"
allowed_types = Array[int]([1])

[sub_resource type="Resource" id="Resource_ipac7"]
script = ExtResource("4_wtskt")
name = "ArmorSlot"
allowed_types = Array[int]([3])

[sub_resource type="Resource" id="Resource_7i5l5"]
script = ExtResource("4_wtskt")
name = "GunSlot1"
allowed_types = Array[int]([0])

[sub_resource type="Resource" id="Resource_ei6ls"]
script = ExtResource("4_wtskt")
name = "GunSlot2"
allowed_types = Array[int]([0])

[sub_resource type="Resource" id="Resource_k0wdg"]
resource_local_to_scene = true
script = ExtResource("5_nptoh")
initial_height = 2
initial_width = 7
equipment_slots = Array[ExtResource("4_wtskt")]([SubResource("Resource_32krh"), SubResource("Resource_ipac7"), SubResource("Resource_7i5l5"), SubResource("Resource_ei6ls")])

[node name="animation_tester" type="Node3D"]
script = ExtResource("1_q42px")

[node name="CSGBox3D" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 24.7382, -1.43478, -4.03961)
use_collision = true
collision_layer = 7
collision_mask = 7
size = Vector3(57.2365, 1, 28.2267)

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -2.64927, 0.994394, -0.346139)
current = true
fov = 90.0
size = 0.719036

[node name="PlayerHUD" type="CanvasLayer" parent="Camera3D"]

[node name="PlayerInventory" parent="Camera3D/PlayerHUD" instance=ExtResource("3_w3nvw")]
visible = false
_inventory = SubResource("Resource_1jxct")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
autostart = true

[node name="AK47-Projectile" parent="." instance=ExtResource("3_jl4nq")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1)
_gun_stats = SubResource("Resource_rlsbf")

[node name="AK47-Projectile2" parent="." instance=ExtResource("3_jl4nq")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1)
_gun_stats = SubResource("Resource_8yqet")

[node name="Player" parent="." instance=ExtResource("2_8jxdu")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.2505, 0, 0)

[node name="Skeleton3D" parent="Player/player_default_mesh_animated/Armature" index="0"]
bones/0/position = Vector3(-0.0975755, -0.00694306, -1.04842)
bones/0/rotation = Quaternion(0.713314, -0.236311, 0.188183, -0.632398)
bones/1/rotation = Quaternion(0.0779051, 0.00707785, 0.00503788, 0.996923)
bones/2/rotation = Quaternion(0.0507492, 0.013634, 0.00785959, 0.998588)
bones/3/rotation = Quaternion(0.092192, 0.0152568, -0.00561048, 0.995609)
bones/4/rotation = Quaternion(-0.000135882, 0.0495159, -0.00700479, 0.998749)
bones/5/rotation = Quaternion(-0.0300888, 0.305071, -0.0593229, 0.950004)
bones/7/rotation = Quaternion(0.753855, 0.314291, -0.412473, 0.403472)
bones/8/rotation = Quaternion(0.346294, -0.253836, 0.113711, 0.895945)
bones/9/rotation = Quaternion(0.515132, -0.531501, 0.496355, 0.453627)
bones/10/rotation = Quaternion(-0.016684, -0.180944, 0.0483519, 0.982162)
bones/11/rotation = Quaternion(0.0436634, -0.0294635, 0.153369, 0.986764)
bones/12/rotation = Quaternion(0.0488257, -0.000220328, -0.119185, 0.991671)
bones/13/rotation = Quaternion(-0.218619, -0.0420837, 0.181335, 0.95789)
bones/15/rotation = Quaternion(0.299671, 0.0850329, 0.0599188, 0.948355)
bones/16/rotation = Quaternion(0.152937, 0.00601103, 0.0169483, 0.988072)
bones/17/rotation = Quaternion(0.148469, -0.00227734, 0.01785, 0.988753)
bones/19/rotation = Quaternion(0.708773, -0.386193, 0.441558, 0.391818)
bones/20/rotation = Quaternion(0.248497, -0.135059, -0.243111, 0.92785)
bones/21/rotation = Quaternion(0.0309808, 0.221067, -0.756116, 0.61519)
bones/22/rotation = Quaternion(0.108171, 0.107453, -0.167817, 0.973956)
bones/23/rotation = Quaternion(-0.0236578, -0.101738, -0.124064, 0.986761)
bones/24/rotation = Quaternion(0.00401807, 0.0111689, 0.192377, 0.981249)
bones/25/rotation = Quaternion(-0.144459, -0.00142761, 0.222599, 0.964147)
bones/27/rotation = Quaternion(0.00424552, 0.000577868, 0.0828087, 0.996556)
bones/28/rotation = Quaternion(0.516135, 0.00177225, 0.0150531, 0.856373)
bones/29/rotation = Quaternion(-0.312428, 0.00991786, 0.0434396, 0.948896)
bones/31/rotation = Quaternion(0.141788, 0.156176, 0.969231, -0.126873)
bones/32/rotation = Quaternion(-0.255437, -0.123511, -0.00607359, 0.958885)
bones/33/rotation = Quaternion(0.478208, -0.147482, 0.00141263, 0.865774)
bones/34/rotation = Quaternion(0.266463, -0.0591006, 0.0171634, 0.961878)
bones/36/rotation = Quaternion(-0.196948, 0.12794, 0.957455, 0.167699)
bones/37/rotation = Quaternion(-0.338051, 0.0205575, -0.00192785, 0.940901)
bones/38/rotation = Quaternion(0.586781, 0.13464, 0.0423674, 0.797349)
bones/39/rotation = Quaternion(0.227263, 0.0718024, 0.0059336, 0.971165)

[node name="ChestBoneAttachment" parent="Player/HitBox" index="0"]
transform = Transform3D(-0.62205, 0.249558, 0.673257, 0.0504388, 0.903761, -0.288396, -0.716247, -0.153093, -0.605023, 0.0131903, 0.485961, 0.0977954)

[node name="HeadBoneAttachment" parent="Player/HitBox" index="1"]
transform = Transform3D(-0.937838, 0.116254, 0.0971848, 0.0973849, 0.929246, -0.171807, -0.116086, -0.159645, -0.929267, 0.0966002, 0.711559, 0.0353682)

[node name="NeckBoneAttachment" parent="Player/HitBox" index="2"]
transform = Transform3D(-0.689023, 0.240188, 0.608323, 0.066053, 0.904655, -0.282375, -0.65068, -0.162506, -0.672835, 0.0516843, 0.625365, 0.0741809)

[node name="LeftUpperArmBoneAttachment" parent="Player/HitBox" index="3"]
transform = Transform3D(-0.835626, -0.083349, 0.444165, -0.0497507, -0.911061, -0.264562, 0.449171, -0.255971, 0.79701, -0.04716, 0.537888, -0.0681048)

[node name="LeftLowerArmBoneAttachment" parent="Player/HitBox" index="4"]
transform = Transform3D(0.497657, 0.809062, 0.0160458, -0.171376, 0.086963, 0.930359, 0.790866, -0.490262, 0.191507, -0.0735919, 0.24897, -0.149279)

[node name="RightUpperArmBoneAttachment" parent="Player/HitBox" index="5"]
transform = Transform3D(-0.0713872, 0.271224, -0.907657, -0.218412, -0.89042, -0.248895, -0.921792, 0.189974, 0.129266, 0.169189, 0.535358, 0.202868)

[node name="RightLowerArmBoneAttachment" parent="Player/HitBox" index="6"]
transform = Transform3D(0.0580118, 0.162025, -0.934282, 0.948201, -0.00304808, 0.0583475, 0.00695359, -0.936076, -0.161905, 0.255336, 0.252541, 0.263208)

[node name="LeftUpperLegBoneAttachment" parent="Player/HitBox" index="7"]
transform = Transform3D(0.781867, 0.111463, 0.527978, -0.178041, -0.824175, 0.43765, 0.509397, -0.459143, -0.657421, -0.047034, 0.0949359, 0.0200107)

[node name="RightUpperLegBoneAttachment" parent="Player/HitBox" index="8"]
transform = Transform3D(0.152798, 0.420711, 0.837947, 0.178281, -0.846548, 0.39252, 0.920528, 0.0941203, -0.215111, 0.0519328, 0.0899283, 0.152129)

[node name="LeftLowerLegBoneAttachment" parent="Player/HitBox" index="9"]
transform = Transform3D(0.890388, -0.102497, 0.314968, -0.109978, -0.943605, 0.00382983, 0.312435, -0.0400524, -0.896259, 0.00648496, -0.300793, -0.200447)

[node name="RightLowerLegBoneAttachment" parent="Player/HitBox" index="10"]
transform = Transform3D(0.11397, -0.21014, 0.919431, 0.178294, -0.90462, -0.228856, 0.926135, 0.200011, -0.0690866, 0.253926, -0.31652, 0.197318)

[node name="RightFootBoneAttachment" parent="Player/HitBox" index="11"]
transform = Transform3D(-0.0896688, 0.816466, 0.47733, 0.00489193, -0.479064, 0.82035, 0.945747, 0.0798896, 0.0410143, 0.154584, -0.744175, 0.291873)

[node name="LeftFootBoneAttachment" parent="Player/HitBox" index="12"]
transform = Transform3D(0.946717, 0.077286, 0.0159488, 0.0265805, -0.493077, 0.811584, 0.0743036, -0.808333, -0.493535, -0.0419793, -0.746961, -0.219386)

[node name="EQUIPMENT" parent="Player/PlayerInventories/MarginContainer/HBoxContainer/PlayerInventoryContainer/TabContainer" index="1"]
_inventory = SubResource("Resource_k0wdg")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]

[editable path="Camera3D/PlayerHUD/PlayerInventory"]
[editable path="Player"]
[editable path="Player/player_default_mesh_animated"]
[editable path="Player/PlayerHUD"]
[editable path="Player/PlayerHUD/interaction_helpers"]
[editable path="Player/PlayerHUD/weapon_info_hud"]
[editable path="Player/PlayerInventories"]
[editable path="Player/PlayerInventories/MarginContainer/HBoxContainer/PlayerInventoryContainer/TabContainer/EQUIPMENT"]
